// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs creates a description for operations if not present 1`] = `
"/**
 * Create a request builder for execution of GET requests to the 'my/Api' endpoint.
 * @returns OpenApiRequestBuilder Use the execute() method to trigger the request.
 */"
`;

exports[`docs creates a schema property documentation 1`] = `
"/**
 * My propert
 */"
`;

exports[`docs creates documentation for the api 1`] = `
"/**
 * Representation of the 'TestApi'.
 * This API is part of the 'TestService' service.
 */"
`;

exports[`docs creates documentation with body parameter 1`] = `
"/**
 * Create a request builder for execution of GET requests to the 'my/Api' endpoint.
 * @param body Request body.
 * @returns OpenApiRequestBuilder Use the execute() method to trigger the request.
 */"
`;

exports[`docs creates documentation with path parameters 1`] = `
"/**
 * Create a request builder for execution of GET requests to the 'my/Api' endpoint.
 * @param pathParameter1 Path parameter.
 * @param path-parameter-2 Path parameter.
 * @returns OpenApiRequestBuilder Use the execute() method to trigger the request.
 */"
`;

exports[`docs creates documentation with query parameters object 1`] = `
"/**
 * Create a request builder for execution of GET requests to the 'my/Api' endpoint.
 * @param queryParameters Object containing the following keys: queryParameter1, queryParameter2.
 * @returns OpenApiRequestBuilder Use the execute() method to trigger the request.
 */"
`;

exports[`docs creates schema documentation 1`] = `
"/**
 * Representation of the 'mySchema' schema.
 */"
`;
